# telegram-bot-worker-scrapper

./: .gitignore  Cargo.toml  READMe.md  sample.env
src/: error.rs  lib.rs  main.rs  model.rs  service.rs
src/service/: deka.rs
