[package]
name = "deka-supremecourt-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-tungstenite = { version = "0.25", features = ["tokio", "tokio-native-tls"] }
futures = "0.3.25"
itertools = "0.10.5"
once_cell = "1.16.0"
rust_decimal = "1.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
snafu = "0.7.3"
tokio = { version = "1.20.2", features = ["full", "tracing", "rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["json"] }
time = { version = "0.3.20", features = ["serde-human-readable", "macros"] }
tokio-native-tls = "0.3.1"
reqwest = { version = "0.12", features = ["json"] }
httparse = "1.8.0"
http = "1.1.0"
nestify = "0.3.3"
url = "2.5.0"
regex = "1.10.4"
scraper = { version = "0.19.0", features = ["main", "errors", "atomic"]}
anyhow = { version = "1", features = ["backtrace"] }
fantoccini = "0.19.3"
